tests/paczka1/small_fuzzy/75692230.err
Error in line 5: fXRU5hZXz6 A17 26,3
Error in line 9: KAlb41 A83 35,5
Error in line 11: KAlb41 S779 1,1
Error in line 10: fXRU5hZXz6 A83 28,2
Error in line 8: 809aKO2Ip A83 19,0
